<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/image_main_AR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/contentDescription_main_image_AR"
        android:src="@drawable/image_ar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHintMainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main_questions_amount" />

        <TextView
            android:id="@+id/text_main_question_amounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_main_questions_amount_inNumbers"
            android:textColor="@color/Black"
            android:textSize="16sp" />


    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="50"
        app:haloRadius="15dp"
        app:labelBehavior="gone"
        app:thumbColor="@color/BrightViolet"
        app:tickColorActive="@color/BrightViolet"
        app:tickColorInactive="@color/OtherGrayishViolet"
        app:trackColorActive="@color/BrightViolet"
        app:trackColorInactive="@color/OtherGrayishViolet" />

    <TextView
        style="@style/TextHintMainStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_main_category" />

    <Spinner
        android:id="@+id/spinner_main_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_custom_spinner" />

    <TextView
        style="@style/TextHintMainStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_main_difficulty" />

    <Spinner
        android:id="@+id/spinner_main_difficulty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_custom_spinner" />

    <Button
        android:id="@+id/button_main_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_rounded"
        android:text="@string/button_main_start"
        android:textColor="@color/White"
        android:textSize="20sp" />


</LinearLayout>