<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.result.ResultActivity">

    <TextView
        android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_result"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_result_check"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/contentDescription_check"
        android:src="@drawable/icon_check"
        app:layout_constraintBottom_toTopOf="@+id/card_result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_result"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="20dp"
        android:background="@color/White"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_history_category"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_result_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_history_difficulty"
                        android:textColor="@color/Gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_result_difficulty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_history_correct_answers"
                        android:textColor="@color/Gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_result_correct_answers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_result"
                        android:textColor="@color/Gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_result_finish"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:backgroundTint="#4CE2A7"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_result" />


</androidx.constraintlayout.widget.ConstraintLayout>